# AerialImageryAnomalyDetection

./: .gitignore  LICENSE  README.md  project.yml  pyproject.toml
docs/: Makefile  aerial_anomaly_detection.datasets.rst  aerial_anomaly_detection.evaluation.datasets.rst  aerial_anomaly_detection.evaluation.rst  aerial_anomaly_detection.models.rst  aerial_anomaly_detection.models.utils.rst  aerial_anomaly_detection.preprocess.norm.functions.rst  aerial_anomaly_detection.preprocess.norm.rst  aerial_anomaly_detection.preprocess.partition.rst  aerial_anomaly_detection.preprocess.rst  aerial_anomaly_detection.preprocess.setup.rst  aerial_anomaly_detection.preprocess.tile.rst  aerial_anomaly_detection.preprocess.tile.tilers.rst  aerial_anomaly_detection.rst  aerial_anomaly_detection.train.rst  conf.py  index.rst  make.bat  modules.rst
notes/: development_notes.md
notes/airbus_dataset/: development_notes.md
src/aerial_anomaly_detection/datasets/: __init__.py  landcover_ai.py  masati_v2.py
src/aerial_anomaly_detection/evaluation/: evaluate_model.py  metrics.py
src/aerial_anomaly_detection/evaluation/datasets/: __init__.py  hrc_whu.py  landcover_ai.py
src/aerial_anomaly_detection/evaluation/landcover_ai/: autoencoder.py
src/aerial_anomaly_detection/models/: autoencoder.py  bigan.py  dual_ae.py  f_anogan.py  izi.py  ziz.py
src/aerial_anomaly_detection/models/utils/: __init__.py  dcgan_discriminator.py  decoder.py  encoder.py
src/aerial_anomaly_detection/train/: __init__.py  autoencoder.py  autoencoder_landcover_ai.py  landcover_ai.py  landcover_ai_bigan.py  landcover_ai_dcgan.py  masati_v2.py  train_bigan.py  train_dcgan.py  train_model.py
src/aerial_anomaly_detection/utils/: dataset_utils.py
src/scripts/: autoencoder_visual_inspection.ipynb
(+23 files in other folders)
