[project]
name = "aerial_anomaly_detection"
version = "0.1.0-dev"
authors = [
  { name="Raúl Barba Rojas", email="raul.barba@ubotica.com" },
]
description = "A Python package to develop, train and evaluate deep learning models to perform aerial imagery anomaly detection."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy==2.2.1",
    "tqdm==4.67.1",
    "torch==2.5.1",
    "afml @ git+https://github.com/AlbertoVelascoMata/afml"
]

[project.urls]
Homepage = "https://github.com/RaulBarbaRojas/AerialImageryAnomalyDetection"
Issues = "https://github.com/RaulBarbaRojas/AerialImageryAnomalyDetection/issues"